Fixed that the zoom out button sometimes appears when clicked on an invisible element, that shouldn't be interactable

--- a/apps/web/components/renderer/RendererUI.module.css
+++ b/apps/web/components/renderer/RendererUI.module.css
@@ -34,6 +34,7 @@
   bottom: 25%;
   width: 100%;
   text-align: center;
+  pointer-events: none;
 }
 
 .cinematic-instructions {
